[gd_scene load_steps=9 format=2]

[ext_resource path="res://Juego/Enemies/LanzaMisiles.gd" type="Script" id=1]
[ext_resource path="res://Juego/Enemies/SpriteLanzaMisiles.png" type="Texture" id=2]
[ext_resource path="res://Juego/Enemies/Sfx_hit_lanzamisiles.ogg" type="AudioStream" id=3]
[ext_resource path="res://Juego/Enemies/Area2D.gd" type="Script" id=4]
[ext_resource path="res://Juego/Enemies/Misil.tscn" type="PackedScene" id=5]

[sub_resource type="Animation" id=2]
resource_name = "Default"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=1]
resource_name = "LanzarMisil"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.8, 1.8 ), Vector2( 2, 2 ), Vector2( 1.8, 1.8 ) ]
}

[sub_resource type="CircleShape2D" id=3]
radius = 84.6303

[node name="LanzaMisiles" type="Node2D" groups=[
"minimapa",
]]
z_index = 5
z_as_relative = false
script = ExtResource( 1 )
misiles = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
rotation = -6.28319
scale = Vector2( 1.8, 1.8 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Default = SubResource( 2 )
anims/LanzarMisil = SubResource( 1 )

[node name="AreaColision" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 26
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaColision"]
shape = SubResource( 3 )

[node name="Sfx_hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = 6.0
bus = "SFX"

[node name="TimerCooldown" type="Timer" parent="."]
wait_time = 7.0

[node name="RayCastDetectarJugador" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 1400, 0 )
collision_mask = 2

[connection signal="body_entered" from="AreaColision" to="." method="_on_AreaColision_body_entered"]
[connection signal="timeout" from="TimerCooldown" to="." method="_on_TimerCooldown_timeout"]
